--- a/css/custom-new.css
+++ b/css/custom-new.css
@@ -227,6 +227,16 @@
     left: -80px;
 }
 
+.form__info_wrap .form_status {
+    margin-top: -5px;
+    margin-bottom: -5px;
+}
+
+.form__label {
+    display: flex;
+    align-items: center;
+}
+
 @media screen and (min-width: 992px) {
     .subscription__tariffs_item:hover > div {
         background: #F9E855;
