fix input errors

--- a/css/custom2.css
+++ b/css/custom2.css
@@ -1429,6 +1429,7 @@ header {
         font-family: 'RobotoMono', sans-serif;
         font-weight: 600;
         font-size: 12px;
+        margin-top: 8px;
     }
 
     .form_wrap .form__field {
