--- a/css/custom-new.css
+++ b/css/custom-new.css
@@ -310,6 +310,18 @@
     margin-bottom: 0;
 }
 
+.form_link {  
+    background-color: #E2E2E2;
+}
+
+.form_link svg {    
+    margin-left: 20px;
+}
+
+.form__label {
+    margin: 0 0 8px;
+}
+
 @media screen and (min-width: 992px) {
     .subscription__tariffs_item:hover > div {
         background: #F9E855;
