--- a/css/custom-new.css
+++ b/css/custom-new.css
@@ -322,6 +322,10 @@
     margin: 0 0 8px;
 }
 
+.form_promo_error {
+    color: #C86F6F;
+}
+
 @media screen and (min-width: 992px) {
     .subscription__tariffs_item:hover > div {
         background: #F9E855;
