--- a/css/custom-new.css
+++ b/css/custom-new.css
@@ -369,6 +369,9 @@
     flex: 0 0 20px;
 }
 
+.form__info_wrap .form_status {    
+    text-transform: none;   
+}
 
 @media screen and (min-width: 992px) {
     .subscription__tariffs_item:hover > div {
