--- a/css/post.css
+++ b/css/post.css
@@ -33,8 +33,8 @@
 }
 
 .additional-posts .b-news__short__list .b-news__short__big a:before {
-  left: 10px;
-  right: 10px;
+  left: 0;
+  right: 0;
   width: auto;
 }
 
@@ -71,6 +71,7 @@
 
 .b-news__short__block > a {
   position: relative;
+  display: block;
 }
 
 
