--- a/css/custom-new.css
+++ b/css/custom-new.css
@@ -323,6 +323,7 @@
 }
 
 .form_promo_error {
+    font-size: 12px;
     color: #C86F6F;
     font-family: 'RobotoMono', sans-serif;
 }
@@ -481,6 +482,10 @@
     bottom: unset;
     top: 0;
     left: -230px;
+}
+
+.b-post__image img {
+    max-width: 100%;
 }
 
 @media screen and (min-width: 992px) {
