--- a/css/custom-new.css
+++ b/css/custom-new.css
@@ -267,6 +267,15 @@
     display: flex;
     align-items: center;
     gap: 4px;
+    text-decoration: none;
+    border-bottom: 1px solid black;
+    line-height: 19px;
+}
+
+.form_wrap .form_short_btn button {  
+    border-top: 1px solid #CACACA;
+    border-bottom: 1px solid #CACACA;
+    border-right: 1px solid #CACACA;
 }
 
 .form-link_margin {
@@ -514,6 +523,10 @@
 
 .collections__top .collections__top_link {   
     font-weight: 700;   
+}
+
+.post-body.subscription__body {
+    margin-bottom: 0;    
 }
 
 @media screen and (min-width: 992px) {
