--- a/css/custom-new.css
+++ b/css/custom-new.css
@@ -529,6 +529,16 @@
     margin-bottom: 0;    
 }
 
+.user__gift_email {
+    font-size: 28px;
+    margin-top: 24px;
+}
+
+.user__gift_email_subscriptions {
+    padding-bottom: 50px;
+    line-height: 1.5;
+}
+
 @media screen and (min-width: 992px) {
     .subscription__tariffs_item:hover > div {
         background: #F9E855;
@@ -577,6 +587,15 @@
     .b-post__image .post-meta__faves {   
         left: -50px; 
     }
+
+    .user__gift_email {
+        font-size: 24px;
+        margin-top: 18px;
+    }
+
+    .user__gift_email_subscriptions {
+        padding-bottom: 44px;
+    }
 }
 
 @media screen and (max-width: 640px) {
@@ -586,6 +605,15 @@
 
     .post-meta__faves {   
         margin-bottom: 8px;
+    }
+
+    .user__gift_email {
+        font-size: 20px;
+        margin-top: 16px;
+    }
+
+    .user__gift_email_subscriptions {
+        padding-bottom: 40px;
     }
 }
 
@@ -628,5 +656,14 @@
     
     .ui-datepicker table {  
         margin-bottom: 6px;       
+    }
+
+    .user__gift_email {
+        font-size: 18px;
+        margin-top: 14px;
+    }
+
+    .user__gift_email_subscriptions {
+        padding-bottom: 36px;
     }
 }
