--- a/css/custom-new.css
+++ b/css/custom-new.css
@@ -603,7 +603,10 @@
 .paymentBtn.paymentDisable {
     opacity: 0.5;
 }
-
+.subscriptions__item {  
+    font-size: 18px;
+    line-height: 28px;
+}
 @media screen and (min-width: 992px) {
     .subscription__tariffs_item:hover > div {
         background: #F9E855;
