--- a/css/custom-new.css
+++ b/css/custom-new.css
@@ -69,7 +69,7 @@
     cursor: pointer;
 }
 
-.form__label_description {
+.form__label.form__label_description {
     font-family: 'RobotoMono', sans-serif;
     font-weight: 500;
     font-size: 12px;
@@ -94,7 +94,9 @@
     display: flex;
     width: 100%;    
 }
-
+.form__field.form__group {
+    margin-bottom: 29px;
+}
 .form__group .form-control {
     flex-grow: 1;
 }
@@ -328,7 +330,7 @@
 }
 
 .form__label {
-    margin: 0 0 8px;
+    margin: 0 0 14px;
 }
 
 .form_promo_error {
@@ -419,7 +421,8 @@
     padding-top: 8px;
     padding-left: 40px;
     padding-right: 40px;
-    max-width: 272px;
+    max-width: 278px;
+    width: 278px;
 }
 
 .ui-datepicker .ui-datepicker-header {
@@ -456,7 +459,7 @@
 }
 
 .ui-state-highlight, .ui-widget-content .ui-state-highlight, .ui-widget-header .ui-state-highlight {
-    background: #F9E855;
+    /* background: #F9E855; */
     color: #020202;
 }
 
@@ -469,8 +472,13 @@
     background: transparent;
 }
 
+.ui-state-default:hover {
+    border: 1px solid #020202;
+}
+
 .ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active, a.ui-button:active, .ui-button:active, .ui-button.ui-state-active:hover {
     border-color: #020202;
+    background: #F9E855;
 }
 
 .ui-datepicker .ui-datepicker-prev {
