--- a/css/custom-new.css
+++ b/css/custom-new.css
@@ -706,7 +706,8 @@
 .info-box.info-box__separated .post-meta-item {
     display: flex;
     align-items: baseline;
-    gap: 20px;    
+    gap: 20px;
+    flex-wrap: wrap;
 }
 
 .info-box.info-box__separated .post-meta-item .rubric {
@@ -747,6 +748,9 @@
         position: static !important;
         margin-left: auto !important;
         margin-right: auto !important;
+    }
+    .post-meta .info-box.info-box__separated .author {
+        width: auto;
     }
 }
 
