--- a/css/custom-new.css
+++ b/css/custom-new.css
@@ -15,6 +15,10 @@
     color: #A2A2A2;  
 }
 
+.footer__bottom_text {
+    display: block;
+}
+
 .subscriptions__types {
     display: flex;
     flex-wrap: wrap;
