--- a/css/custom-new.css
+++ b/css/custom-new.css
@@ -45,6 +45,26 @@
     opacity: 0.8;
 } 
 
+.subscription-square-radio {
+    position: relative;
+    transform: translateY(5px);
+    width: 20px;
+    height: 20px;
+    border: 2px solid #000;
+}
+
+.subscription__tariffs_item.active .subscription-square-radio::before {
+    position: absolute;
+    content: '';
+    width: 10px;
+    height: 10px;
+    background-color: #000;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+
 .square-radio input[type="radio"], .square-radio input[type="checkbox"] {
     -webkit-appearance: none;
     appearance: none;
