--- a/css/custom-new.css
+++ b/css/custom-new.css
@@ -111,7 +111,7 @@
 .subscription__terms_checkbox {
     .custom-checkbox-label {
         display: flex;
-        align-items: center;
+        /* align-items: center; */
         cursor: pointer;
     }
       
@@ -806,9 +806,14 @@
     margin-bottom: unset;
     padding-bottom: 35px;
 }
-.subscription__terms label {  
+.subscription-text {
+    display: flex;
     flex-wrap: wrap;
     row-gap: 8px;
+}
+.subscription__terms label {  
+    /* flex-wrap: wrap; */
+    /* row-gap: 8px; */
 }
 .subscription-link{
     margin-top: 24px !important;
