--- a/css/custom-new.css
+++ b/css/custom-new.css
@@ -841,6 +841,15 @@
     text-align: left;
     text-transform: none;
 }
+
+.post-meta__mobile {
+    display: none;
+}
+
+.post-meta__mobile  .info-box.info-box__separated {
+    align-items: center;
+}
+
 @media screen and (min-width: 992px) {
     .subscription__tariffs_item:hover > div {
         background: #F9E855;
@@ -960,6 +969,15 @@
     }
 }
 
+@media (max-width: 540px) {
+    .post-meta__desktop {
+        display: none;
+    }
+    
+    .post-meta__mobile {
+        display: flex;
+    }
+}
 
 @media screen and (max-width: 480px) {
     .form__group-info {       
