--- a/css/custom-new.css
+++ b/css/custom-new.css
@@ -862,6 +862,10 @@
     color:#000;
 }
 
+.post-body .post-img .banner-new {   
+    margin-right: auto;
+}
+
 @media screen and (min-width: 992px) {
     .subscription__tariffs_item:hover > div {
         background: #F9E855;
