--- a/css/custom-new.css
+++ b/css/custom-new.css
@@ -992,6 +992,252 @@
     opacity: 1;
 }
 
+.b-news__short__image img {
+    display: block;
+}
+
+.b-news__short__category {
+    padding: 0 6px 0 0 !important;
+}
+
+.b-news__short__gide {
+    color: #000;
+    background: none;
+    padding: 0;   
+}
+
+.b-news__short__date, .b-news__short__category {
+    font-family: 'RobotoMono', sans-serif;
+    font-weight: 500;
+    font-size: 10px;
+    line-height: 2;
+    color: #000000;
+}
+
+.b-news__short__date::before {
+    content: '/ ';
+}
+
+.hero-image .container .content p {
+    font-family: 'Spectral', serif;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.33;
+    text-align: center;
+    color: #FFFFFF;
+}
+
+.hero-image .content .ui-btn {
+    margin-bottom: 30px;
+}
+
+.guide-search-title { 
+    font-family: 'Spectral', serif;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.56;
+    text-align: center;
+    color: #000000;
+    margin-bottom: 9px;
+}
+
+.guide-search-form {
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 18px;
+}
+
+.guide-look-all {
+    font-family: 'Spectral', serif;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.56;
+    text-align: center;
+    color: #A3A3A3;
+    cursor: pointer;
+    margin-bottom: 104px;
+}
+
+.ui-section-title {
+    font-family: 'Druk-Text-Cyr-Bold', sans-serif;
+    font-weight: 900;
+    font-size: 26px;
+    line-height: 1.23;
+    text-align: center;
+    color: #000000;
+    margin-bottom: 40px;
+}
+
+.ui-search {   
+    display: flex;
+    padding: 20px 20px 20px 20px;
+    height: 68px;
+    max-width: 580px;  
+    background-color: #E5E5E5;
+}
+
+.ui-search-wrap  {   
+    /* width: 100%; */
+    flex-grow: 1;
+    display: flex;
+    align-items: center;  
+}
+
+.ui-search-wrap input {
+    font-family: 'RobotoMono', sans-serif;
+    font-weight: 500;
+    font-size: 12px;
+    color: #020202;
+    height: 44px;
+    padding: 0 16px;
+    background-color: #fff;
+    width: calc(100% - 34px);
+    border: 1px solid #CACACA;
+}
+
+.ui-search-input {
+    position: relative;
+    flex-grow: 1;
+}
+
+.ui-search-btn {
+    border: none;
+    outline: none;
+    background-color: transparent;
+    margin-left: 24px;
+    margin-right: 16px;
+    padding: 6px;
+    cursor: pointer;
+}
+
+.ui-search-dropdown { 
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 100%;
+    background-color: #fff;
+    border: 1px solid #CACACA;
+    border-top: 0;
+    z-index: 100;  
+    padding-top: 12px;
+    max-height: 250px;
+    overflow-y: auto;
+    display: none;
+}
+
+.ui-search-dropdown.show {
+    display: block;
+}
+
+.ui-search-dropdown-item {
+    padding: 10px 16px;
+    cursor: pointer;
+}
+
+.ui-search-dropdown-item:hover {
+    background-color: #DEE7E9;
+}
+
+.ui-search-dropdown a {
+    font-family: 'RobotoMono', sans-serif;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.67;
+    color: #020202;  
+    text-decoration: none;
+}
+.ui-btn {    
+    height: 50px;   
+    padding-left: 36px;
+    padding-right: 36px;
+    width: max-content;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-transform: uppercase;   
+    border: none;
+    font-family: 'DrukTextCyrHeavy', sans-serif !important;
+    font-weight: 900;
+    color: #000000;
+    font-size: 24px;
+    cursor: pointer;
+    text-decoration: none;
+    transition: background-color .3s .1s;
+}
+
+.ui-btn__centered {
+    margin: 0 auto;
+}
+
+.ui-btn__yellow {
+    background-color: #F9E855;
+}
+
+.ui-btn.ui-btn__yellow:hover {
+    background-color: #D5CE1A;
+}
+
+.guide-all {
+    max-width: 830px;
+}
+
+.guide-all-list {
+    margin-bottom: 231px;
+}
+
+.guide-all-list-item {
+    display: flex;
+    gap: 20px;
+    margin-bottom: 86px;
+}
+
+.guide-all-list-item:last-child { 
+    margin-bottom: 0;
+}
+
+.guide-all-letter {
+    flex-grow: 1;
+    color: #000000;
+    font-family: 'DrukTextCyrHeavy', sans-serif;
+    text-transform: uppercase;
+    font-weight: 900;
+    font-size: 40px;
+    line-height: 0.8;
+}
+
+.guide-all-col {    
+    width: min(25%, 200px);
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    row-gap: 22px;
+}
+
+.guide-all-item {
+    display:  inline-block;
+    font-family: 'DrukCyr', sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.11;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: #000000;    
+}
+
+.guide-all-item:hover span{
+    text-decoration: underline;
+}
+
+.guide-all-item.new::after {
+    content: 'NEW';
+    background-color: #46A141;
+    color: #fff;
+    padding: 2px 8px;
+    margin-left: 12px;    
+    text-decoration: none !important;
+}
+
 
 @media screen and (min-width: 992px) {
     .subscription__tariffs_item:hover > div {
